data/derived/comb/progs/unify/prog3467.ml.out
Characters 78-86:
  | 1 -> buildX()
         ^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         int
